--- a/css/style.css
+++ b/css/style.css
@@ -196,8 +196,7 @@ h1 {
         margin: 0;
         padding: 0;
         position: relative;
-        height:969px;
-    
+        height:100vh;
     }
     
     
