--- a/css/index_style.css
+++ b/css/index_style.css
@@ -133,15 +133,20 @@
         margin-bottom: 309px;
         position: relative;
         width: 100%;
+        height: calc(100vh - 80px);
     }
     .intro .txt{
-        height: 100vh;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
     }
     .intro p{
         font-size: 2.5rem;
         /* line-height: 1.3em;
         text-align: center;
         font-weight: 500; */
-        padding-top: 30vh;
+        padding-top: 0;
     }
 }
