--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,9 @@ body::-webkit-scrollbar {
     width: 100%;
     max-width: 1530px;
     box-sizing: border-box;
-    margin: 35px auto;
-    padding: 20px 10px;
+    margin: 0 auto;
+    padding: 80px 10px;
     position: relative;
-
 }
 
 
@@ -24,7 +23,7 @@ body::-webkit-scrollbar {
     border-radius: 20px;
     position: relative;
     /* overflow: hidden; */
-    height: 850px;
+    height: 800px;
   /*  width: 80%;
     */
     display: flex;
@@ -45,9 +44,8 @@ body::-webkit-scrollbar {
 
 #header {
     width: 100%;
-    height: 100px;
     position: absolute;
-    top: 0;
+    top: 7px;
     right: 0;
     z-index: 50;
     display: flex;
@@ -76,8 +74,8 @@ h1 {
     font-size: 1.5rem;
     font-weight: 700;
     color: #ffffff;
-    margin-top: 40px;
-    margin-left: 30px;
+margin: auto 0;
+padding-left: 20px;
 }
 #header .nav{
     vertical-align: middle;
@@ -196,7 +194,6 @@ h1 {
         margin: 0;
         padding: 0;
         position: relative;
-        height:100vh;
     }
     
     
