--- a/css/project_style.css
+++ b/css/project_style.css
@@ -80,7 +80,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 50%;
     margin-right: 32px;
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 #web .lazy .slick-dots button:nth-of-type(3){
     margin-right: 0;
@@ -343,7 +343,7 @@
         transform: translateX(-50%); */
     }
 
-    #graphic .graphic_img .graphic_left a:hover p{
+    #graphic .graphic_img .graphic_left .modal:hover p{
         width: 100%;
         font-size: 1.3rem;
         font-weight: 700;
@@ -351,7 +351,7 @@
         /* margin-top: 50%; */
         display: block;
     }
-    #graphic .graphic_img .graphic_right a:hover p{
+    #graphic .graphic_img .graphic_right .modal:hover p{
         width: 100%;
         font-size: 1.3rem;
         font-weight: 700;
@@ -364,11 +364,11 @@
         text-align: center;
         transform: translate(-50%, -50%); */
     }
-    #graphic .graphic_img .graphic_left a:hover p span{
+    #graphic .graphic_img .graphic_left .modal:hover p span{
         font-size: 1rem;
         font-weight: 400;
     }
-    #graphic .graphic_img .graphic_right a:hover p span{
+    #graphic .graphic_img .graphic_right .modal:hover p span{
         font-size: 1rem;
         font-weight: 400;
     }
@@ -473,7 +473,7 @@
         width: 90%;
         margin: auto;
     }
-    #graphic .graphic_img .graphic_left a, #graphic .graphic_img .graphic_right a {
+    #graphic .graphic_img .graphic_left .modal, #graphic .graphic_img .graphic_right .modal {
         /* position: relative; */
         display: flex;
         justify-content: inherit;
@@ -481,7 +481,7 @@
         flex-direction: row;
         margin-bottom: 30px;
     }
-    #graphic .graphic_img .graphic_left a:hover::after, #graphic .graphic_img .graphic_right a:hover::after{
+    #graphic .graphic_img .graphic_left .modal:hover::after, #graphic .graphic_img .graphic_right .modal:hover::after{
         /* content: ''; */
         display: none;
         /* background-color: rgba(0,0,0, 0.7);
@@ -497,7 +497,7 @@
         margin:auto;
     }
     
-    #graphic .graphic_img .graphic_left a p, #graphic .graphic_img .graphic_right a p {
+    #graphic .graphic_img .graphic_left .modal p, #graphic .graphic_img .graphic_right .modal p {
         display: block;
         position: relative;
         top: 0;
@@ -513,16 +513,16 @@
         margin: auto;
 
     }
-    #graphic .graphic_img .graphic_left a p span{
+    #graphic .graphic_img .graphic_left .modal p span{
         font-size:0.9rem;
         font-weight: 400;
     }
-    #graphic .graphic_img .graphic_right a p span{
+    #graphic .graphic_img .graphic_right .modal p span{
         font-size: 0.9rem;
         font-weight: 400;
     }
     
-    #graphic .graphic_img .graphic_left a:hover p{
+    #graphic .graphic_img .graphic_left .modal:hover p{
         width: 100%;
         font-size: 1rem;
         font-weight: 700;
@@ -530,7 +530,7 @@
         /* margin-top: 50%; */
         display: block;
     }
-    #graphic .graphic_img .graphic_right a:hover p{
+    #graphic .graphic_img .graphic_right .modal:hover p{
         width: 100%;
         font-size: 1rem;
         font-weight: 700;
@@ -543,11 +543,11 @@
         text-align: center;
         transform: translate(-50%, -50%); */
     }
-    #graphic .graphic_img .graphic_left a:hover p span{
+    #graphic .graphic_img .graphic_left .modal:hover p span{
         font-size: 0.9rem;
         font-weight: 400;
     }
-    #graphic .graphic_img .graphic_right a:hover p span{
+    #graphic .graphic_img .graphic_right .modal:hover p span{
         font-size: 0.9rem;
         font-weight: 400;
     }
@@ -557,6 +557,52 @@
 @media all and (max-width:450px){
     #web {
         padding-top: 50px;
+    }
+    #web .lazy div img {
+        width: 90%;
+        margin: 0 auto;
+        grid-area: area1;
+    }
+    #web h1 {
+        text-align: center;
+        margin-bottom: 30px;
+        font-size: 2.5rem;
+    }
+    #web .lazy div .slide_txt h1 {
+        margin-top: 0px;
+        font-size: 2rem;
+    }
+    #web .lazy div .slide_txt a {
+        font-size: 1rem;
+        display: block;
+        position: relative;
+    }
+    #web .lazy div .slide_txt a::after {
+        content: '';
+        display: block;
+        height: 2px;
+        width: 180px;
+        background-color: #222222;
+        margin-top: 20px;
+    }
+    #web .lazy div .slide_txt a:nth-of-type(2) {
+        margin-top: 25px;
+        font-size: 1rem;
+    }
+    #web .lazy div .slide_txt a::before {
+        content: '';
+        display: block;
+        width: 3px;
+        height: 16px;
+        border-right: 2px solid #222222;
+        margin: auto;
+        transform: rotate(322deg);
+        position: absolute;
+        left: 168px;
+        top: 15px;
+    }
+    #web .lazy div .slide_txt a::after {
+        margin: 10px auto 0 auto;
     }
     #web .lazy .slick-dots {
         /* display: flex;
@@ -568,6 +614,12 @@
     }
     #graphic{
         margin-bottom: 100px;
+    }
+    #graphic h1 {
+        margin-top: 150px;
+        padding-top: 0;
+        margin-bottom: 80px;
+        font-size: 2.5rem;
     }
     #graphic .graphic_img .graphic_left, #graphic .graphic_img .graphic_right{
         width: 95%;
