--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ padding-left: 20px;
         border-radius: 0;
         position: relative;
         /* overflow: hidden; */
-        height: 100%;
+        height: 100vh;
       /*  width: 80%;
         */
         display: block;
