--- a/css/project_style.css
+++ b/css/project_style.css
@@ -153,10 +153,10 @@
     width: 100%;
     margin-bottom: 50px;
 }
-#graphic .graphic_img .graphic_left .modal, #graphic .graphic_img .graphic_right .modal {
+#graphic .graphic_img .graphic_left a, #graphic .graphic_img .graphic_right a {
     position: relative;
 }
-#graphic .graphic_img .graphic_left .modal:hover::after, #graphic .graphic_img .graphic_right .modal:hover::after{
+#graphic .graphic_img .graphic_left a:hover::after, #graphic .graphic_img .graphic_right a:hover::after{
     content: '';
     display: block;
     background-color: rgba(0,0,0, 0.7);
@@ -166,7 +166,7 @@
     width: 100%;
     height: 100%;
 }
-#graphic .graphic_img .graphic_left .modal p, #graphic .graphic_img .graphic_right .modal p {
+#graphic .graphic_img .graphic_left a p, #graphic .graphic_img .graphic_right a p {
     display: none;
     position: absolute;
     top: 50%;
@@ -177,7 +177,7 @@
     z-index: 5;
     transform: translateY(-45%);
 }
-#graphic .graphic_img .graphic_left .modal:hover p{
+#graphic .graphic_img .graphic_left a:hover p{
     width: 100%;
     font-size: 1.8rem;
     font-weight: 700;
@@ -190,7 +190,7 @@
     text-align: center;
     transform: translate(-50%, -50%); */
 }
-#graphic .graphic_img .graphic_right .modal:hover p{
+#graphic .graphic_img .graphic_right a:hover p{
     width: 100%;
     font-size: 1.8rem;
     font-weight: 700;
@@ -203,11 +203,11 @@
     text-align: center;
     transform: translate(-50%, -50%); */
 }
-#graphic .graphic_img .graphic_left .modal:hover p span{
+#graphic .graphic_img .graphic_left a:hover p span{
     font-size: 1.3rem;
     font-weight: 400;
 }
-#graphic .graphic_img .graphic_right .modal:hover p span{
+#graphic .graphic_img .graphic_right a:hover p span{
     font-size: 1.3rem;
     font-weight: 400;
 }
@@ -343,7 +343,7 @@
         transform: translateX(-50%); */
     }
 
-    #graphic .graphic_img .graphic_left .modal:hover p{
+    #graphic .graphic_img .graphic_left a:hover p{
         width: 100%;
         font-size: 1.3rem;
         font-weight: 700;
@@ -351,7 +351,7 @@
         /* margin-top: 50%; */
         display: block;
     }
-    #graphic .graphic_img .graphic_right .modal:hover p{
+    #graphic .graphic_img .graphic_right a:hover p{
         width: 100%;
         font-size: 1.3rem;
         font-weight: 700;
@@ -364,11 +364,11 @@
         text-align: center;
         transform: translate(-50%, -50%); */
     }
-    #graphic .graphic_img .graphic_left .modal:hover p span{
+    #graphic .graphic_img .graphic_left a:hover p span{
         font-size: 1rem;
         font-weight: 400;
     }
-    #graphic .graphic_img .graphic_right .modal:hover p span{
+    #graphic .graphic_img .graphic_right a:hover p span{
         font-size: 1rem;
         font-weight: 400;
     }
@@ -473,7 +473,7 @@
         width: 90%;
         margin: auto;
     }
-    #graphic .graphic_img .graphic_left .modal, #graphic .graphic_img .graphic_right .modal {
+    #graphic .graphic_img .graphic_left a, #graphic .graphic_img .graphic_right a {
         /* position: relative; */
         display: flex;
         justify-content: inherit;
@@ -481,7 +481,7 @@
         flex-direction: row;
         margin-bottom: 30px;
     }
-    #graphic .graphic_img .graphic_left .modal:hover::after, #graphic .graphic_img .graphic_right .modal:hover::after{
+    #graphic .graphic_img .graphic_left a:hover::after, #graphic .graphic_img .graphic_right a:hover::after{
         /* content: ''; */
         display: none;
         /* background-color: rgba(0,0,0, 0.7);
@@ -497,7 +497,7 @@
         margin:auto;
     }
     
-    #graphic .graphic_img .graphic_left .modal p, #graphic .graphic_img .graphic_right .modal p {
+    #graphic .graphic_img .graphic_left a p, #graphic .graphic_img .graphic_right a p {
         display: block;
         position: relative;
         top: 0;
@@ -513,16 +513,16 @@
         margin: auto;
 
     }
-    #graphic .graphic_img .graphic_left .modal p span{
+    #graphic .graphic_img .graphic_left a p span{
         font-size:0.9rem;
         font-weight: 400;
     }
-    #graphic .graphic_img .graphic_right .modal p span{
+    #graphic .graphic_img .graphic_right a p span{
         font-size: 0.9rem;
         font-weight: 400;
     }
     
-    #graphic .graphic_img .graphic_left .modal:hover p{
+    #graphic .graphic_img .graphic_left a:hover p{
         width: 100%;
         font-size: 1rem;
         font-weight: 700;
@@ -530,7 +530,7 @@
         /* margin-top: 50%; */
         display: block;
     }
-    #graphic .graphic_img .graphic_right .modal:hover p{
+    #graphic .graphic_img .graphic_right a:hover p{
         width: 100%;
         font-size: 1rem;
         font-weight: 700;
@@ -543,11 +543,11 @@
         text-align: center;
         transform: translate(-50%, -50%); */
     }
-    #graphic .graphic_img .graphic_left .modal:hover p span{
+    #graphic .graphic_img .graphic_left a:hover p span{
         font-size: 0.9rem;
         font-weight: 400;
     }
-    #graphic .graphic_img .graphic_right .modal:hover p span{
+    #graphic .graphic_img .graphic_right a:hover p span{
         font-size: 0.9rem;
         font-weight: 400;
     }
@@ -613,7 +613,7 @@
         transform: translateX(0);
     }
     #graphic{
-        margin-bottom: 100px;
+        margin-bottom: 400px;
     }
     #graphic h1 {
         margin-top: 150px;
