--- a/css/index_style.css
+++ b/css/index_style.css
@@ -4,8 +4,8 @@
 }
 
 .intro{
-    margin-top: 350px;
-    margin-bottom: 309px;
+    /* margin-top: 350px;
+    margin-bottom: 309px; */
     position: relative;
     width: 100%;
 }
