--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body::-webkit-scrollbar {
     position: relative;
     /* overflow: hidden; */
     height: 86vh;
-    min-height: ;
+    min-height: 400px;
     /* width: 80%; */
     display: flex;
     align-items: center;
