--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,18 @@ padding-left: 20px;
     }
     
     
+    /* .inner_box {
+        background-color: #ffffff;
+        border: none;
+        border-radius: 0;
+        position: relative; */
+        /* overflow: hidden; */
+        /* height: 100vh; */
+      /*  width: 80%;
+        */
+        /* display: block;
+        align-items: center;
+    } */
     .inner_box {
         background-color: #ffffff;
         border: none;
@@ -205,10 +217,12 @@ padding-left: 20px;
         position: relative;
         /* overflow: hidden; */
         height: 100vh;
-      /*  width: 80%;
-        */
-        display: block;
+        min-height: 500px;
+        /* width: 80%; */
+        display: flex;
         align-items: center;
+        box-sizing: border-box;
+        /* padding-top: 55px; */
     }
     
     .inner_box > p {
@@ -311,7 +325,7 @@ padding-left: 20px;
     
     
     /*********************스크롤 만들기****************************/
-    #project_box{
+    #project_box {
         overflow-y: scroll;
         height: 969px;
         margin-top: 0px;
@@ -321,20 +335,20 @@ padding-left: 20px;
     /*********************스크롤커스텀*************************/
     /* 스크롤바 설정*/
     .scroll::-webkit-scrollbar{
-        width: 11px;
+        width: 5px;
     }
     
     /* 스크롤바 막대 설정*/
     .scroll::-webkit-scrollbar-thumb{
         height: 17%;
-        background-color: #000000;
-        border-radius: 10px;  
+        background-color: #aaaaaa;
+        border-radius: 0;  
     }
     
     /* 스크롤바 뒷 배경 설정*/
     .scroll::-webkit-scrollbar-track{
-        background-color: rgba(0,0,0,0.33);
-        border-bottom-right-radius: 20px;
+        background-color: rgba(200,200,200,0.33);
+        border-bottom-right-radius: 0;
     }
 }
 
