--- a/css/project_style.css
+++ b/css/project_style.css
@@ -562,6 +562,9 @@
 }
 
 @media all and (max-width:450px){
+    #web {
+        padding-top: 156px;
+    }
     #web .lazy div img {
         width: 90%;
         margin: 0 auto;
@@ -617,7 +620,7 @@
         transform: translateX(0);
     }
     #graphic{
-        margin-bottom: 200px;
+        margin-bottom: 300px;
     }
     #graphic h1 {
         margin-top: 150px;
