--- a/css/style.css
+++ b/css/style.css
@@ -216,13 +216,13 @@ padding-left: 20px;
         border-radius: 0;
         position: relative;
         /* overflow: hidden; */
-        height: 100vh;
+        height: 90vh;
         min-height: 500px;
         /* width: 80%; */
         display: flex;
         align-items: center;
         box-sizing: border-box;
-        /* padding-top: 55px; */
+        padding-top: 0;
     }
     
     .inner_box > p {
@@ -328,7 +328,7 @@ padding-left: 20px;
     #project_box {
         overflow-y: scroll;
         height: 969px;
-        margin-top: 0px;
+        margin-top: 150px;
         box-sizing: border-box;
     }
     
