--- a/css/project_style.css
+++ b/css/project_style.css
@@ -563,7 +563,7 @@
 
 @media all and (max-width:450px){
     #web {
-        padding-top: 156px;
+        padding-top: 150px;
     }
     #web .lazy div img {
         width: 90%;
@@ -623,7 +623,7 @@
         margin-bottom: 300px;
     }
     #graphic h1 {
-        margin-top: 150px;
+        margin-top: 100px;
         padding-top: 0;
         margin-bottom: 80px;
         font-size: 2.5rem;
@@ -631,6 +631,16 @@
     #graphic .graphic_img .graphic_left, #graphic .graphic_img .graphic_right{
         width: 95%;
         margin: auto;
+    }
+    #graphic .graphic_img .graphic_left .modal:hover::after, #graphic .graphic_img .graphic_right .modal:hover::after{
+        content: '';
+        display: none;
+        background-color: rgba(0,0,0, 0.7);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
     #pop_up1 .img, #pop_up12 .img, #pop_up13 .img {
         height: 100%;
