--- a/css/project_style.css
+++ b/css/project_style.css
@@ -562,9 +562,9 @@
 }
 
 @media all and (max-width:450px){
-    #web {
+    /* #web {
         padding-top: 140px;
-    }
+    } */
     #web .lazy div img {
         width: 90%;
         margin: 0 auto;
@@ -620,7 +620,7 @@
         transform: translateX(0);
     }
     #graphic{
-        margin-bottom: 300px;
+        margin-bottom: 250px;
     }
     #graphic h1 {
         margin-top: 100px;
