--- a/css/style.css
+++ b/css/style.css
@@ -327,8 +327,8 @@ padding-left: 20px;
     /*********************스크롤 만들기****************************/
     #project_box {
         overflow-y: scroll;
-        height: 969px;
-        margin-top: 130px;
+        height: 100%;
+        margin-top: 0;
         box-sizing: border-box;
     }
     
