--- a/css/project_style.css
+++ b/css/project_style.css
@@ -562,9 +562,10 @@
 }
 
 @media all and (max-width:450px){
-    /* #web {
-        padding-top: 140px;
-    } */
+    #web {
+        padding-top: 80px;
+        margin-bottom: 160px;
+    }
     #web .lazy div img {
         width: 90%;
         margin: 0 auto;
@@ -621,10 +622,11 @@
     }
     #graphic{
         margin-bottom: 100px;
+        padding-top: 0;
     }
     #graphic h1 {
-        margin-top: 100px;
-        padding-top: 0;
+        /* margin-top: 100px; */
+        padding-top: 50px;
         margin-bottom: 80px;
         font-size: 2.5rem;
     }
