--- a/css/index_style.css
+++ b/css/index_style.css
@@ -136,12 +136,11 @@
         height: calc(100vh - 80px);
     }
     .intro .txt{
-        /* height: 100%; */
+        height: 100%;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
-        margin-top: 50%;
     }
     .intro p{
         font-size: 2.5rem;
