--- a/css/index_style.css
+++ b/css/index_style.css
@@ -4,28 +4,149 @@
 }
 
 .intro{
-    margin-top: 350px;
-    margin-bottom: 309px;
+    /* margin-top: 350px;
+    margin-bottom: 309px; */
     position: relative;
+    width: 100%;
 }
 .intro p{
     font-size: 3.9rem;
-    line-height: 1.3em;
+    line-height: 1.1em;
     text-align: center;
     font-weight: 500;
 }
 .intro p span{
     color: #5606FF;
 }
+.intro .skill p {
+    font-size: 0.9rem;
+    margin-top: 30px;
+    font-weight: 100;
+    word-spacing: 30px;
+    line-height: 2em;
+}
 .intro img{
     width: 86px;
     position: absolute;
     top: -17px;
-    right: 361px;
+    right: 21%;
     animation: emoji 2.5s infinite ;
 }
 @keyframes emoji{
     0%{transform: rotate(0deg);}
     50%{transform: rotate(-10deg);}
     100%{transform: rotate(0deg);}
+}
+
+
+
+
+/*******************************/
+.pop_up{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
+    background-color: #ffffff;
+    border-radius: 20px;
+    border: 4px solid #000000;
+}
+.pop_up::before{
+    content: '';
+    width: 100%;
+    height: 55px;
+    background-color: #000000;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    z-index: 2;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.pop_up p{
+    text-align: center;
+    margin: auto 0;
+    font-size: 1.5rem;
+    margin-top: 150px;
+    line-height: 1.2em;
+}
+.pop_up button{
+    border: 1px solid #5606FF;
+    background-color: #5606FF;
+    padding: 20px;
+    border-radius: 50px;
+    margin: 0 auto;
+    display: block;
+    font-size: 1.3rem;
+    margin-top: 40px;
+    color: #ffffff;
+}
+
+
+@media all and (max-width:1410px){
+    .intro img {
+        width: 86px;
+        position: absolute;
+        top: -17px;
+        right: 17%;
+        animation: emoji 2.5s infinite;
+    }
+}
+
+
+@media all and (max-width:1250px){
+    .intro img {
+        width: 86px;
+        position: absolute;
+        top: -17px;
+        right: 12%;
+        animation: emoji 2.5s infinite;
+    }
+}
+
+
+@media all and (max-width:1000px){
+    .intro img {
+        /* width: 86px;
+        position: absolute;
+        top: -17px;
+        right: 17%;
+        animation: emoji 2.5s infinite; */
+        display: none;
+    }
+    .intro .skill p {
+        font-size: 0.9rem;
+        margin-top: 30px;
+        font-weight: 100;
+        word-spacing: 30px;
+        line-height: 2em;
+        padding: 0 10px;
+    }
+}
+
+@media all and (max-width:450px){
+    .intro {
+        margin-top: 0;
+        margin-bottom: 0;
+        position: relative;
+        width: 100%;
+        height: calc(100vh - 80px);
+    }
+    .intro .txt{
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .intro p{
+        font-size: 2.5rem;
+        /* line-height: 1.3em;
+        text-align: center;
+        font-weight: 500; */
+        padding-top: 0;
+    }
 }
