--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,36 @@
+body{
+    background-image: url(../images/bg.png);
+    background-size: cover;
+}
 body::-webkit-scrollbar { 
     display: none; 
 }
 
-html{
-    background-image: url(../images/background.png);
-}
 #wrap{
     overflow: hidden;
-    width: 1920px;
-    min-width: 1900px;
+    width: 100%;
+    max-width: 1530px;
+    margin: calc(7vh - 15px) auto;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    position: relative;
 }
 
-.inner {
-    max-width: calc(100% - 200px);
-    box-sizing: border-box;
-}
 .inner_box {
     background-color: #ffffff;
     border: 4px solid #000000;
     border-radius: 20px;
     position: relative;
-    overflow-y: hidden;
-    height: 850px;
-    margin: 55px;
+    /* overflow: hidden; */
+    height: 86vh;
+    min-height: 500px;
+    /* width: 80%; */
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding-top: 55px;
 }
+
 .inner_box > p {
     position: absolute;
     top: 16px;
@@ -33,9 +40,19 @@ html{
     font-size: 1.3rem;
     font-weight: 700;
 }
+
+
+
 #header {
-    float: right;
-    margin: 50px;
+    width: 100%;
+    position: absolute;
+    top: 7px;
+    right: 0;
+    z-index: 50;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
 }
 #section{}
 #footer{}
@@ -46,60 +63,79 @@ html{
     flex-direction: row;
 }
 
-h1{
-    font-size: 4rem;
+h1 {
+    font-size: 3rem;
     font-weight: 500;
     text-align: center;
     line-height: 1em;
 }
 
 /*********************header****************************/
-#header .nav {
-    top: 0;
-    right: 0;
+#header p{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #ffffff;
+margin: auto 0;
+padding-left: 20px;
 }
-#header .nav ul li{
-    margin-bottom: 43px;
+#header .nav{
+    vertical-align: middle;
+    margin: auto 0;
+    padding-right: 30px;
+}
+#header .nav ul {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: end;
+}
+
+#header .nav ul li {
     position: relative;
+    margin-left: 20px;
 }
-#header .nav ul li a img{
-    width: 118px;
+#header .nav ul li a img {
+    width: 40px;
     display: block;
 }
 #header .nav ul li a p{
-    position: absolute;
-    bottom: 21%;
-    left: 50%;
     font-size: 1.2rem;
     text-align: center;
     transform: translateX(-50%);
     color: #000000;
     line-height: 1.2rem;
+    display: none;
 }
 #header .nav ul li:nth-child(1) a p, #header .nav ul li:nth-child(2) a p{
     bottom: 30%;
 }
-#header .nav ul li:nth-child(1){
-    margin-top: 175px;
-}
 
 /*********************section****************************/
-.inner_box::after{
+.inner_box::before{
     content: '';
     width: 100%;
     height: 55px;
     background-color: #000000;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    z-index: 2;
+    z-index: 30;
     display: block;
     position: absolute;
     top: 0;
     left: 0;
 }
-.inner_box::before{
+.inner_box::after{
     content: '';
     display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #111111;
+    border-radius: 20px;
+    /* transform: translate(15px, -15px); */
+    position: absolute;
+    top: -12px;
+    left: 12px;
+    z-index: -1;
 }
 .inner_box > img{
     position: absolute;
@@ -111,11 +147,11 @@ h1{
 
 
 /*********************스크롤 만들기****************************/
-#project_box{
+#project_box {
     overflow-y: scroll;
-    height: 100%;
-    margin-top: 38px;
+    /* margin-top: 38px; */
     box-sizing: border-box;
+    height: 100%;
 }
 
 /*********************스크롤커스텀*************************/
@@ -134,4 +170,186 @@ h1{
 /* 스크롤바 뒷 배경 설정*/
 .scroll::-webkit-scrollbar-track{
     background-color: rgba(0,0,0,0.33);
+    border-bottom-right-radius: 20px;
 }
+
+
+
+
+
+
+@media all and (max-width:450px){
+    body{
+        background-image: none;
+        background-size: cover;
+        background-color: #ffffff;
+    }
+    body::-webkit-scrollbar { 
+        display: none; 
+    }
+    
+    #wrap{
+        overflow: hidden;
+        width: 100%;
+        max-width: 1530px;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        position: relative;
+    }
+    
+    
+    /* .inner_box {
+        background-color: #ffffff;
+        border: none;
+        border-radius: 0;
+        position: relative; */
+        /* overflow: hidden; */
+        /* height: 100vh; */
+      /*  width: 80%;
+        */
+        /* display: block;
+        align-items: center;
+    } */
+    .inner_box {
+        background-color: #ffffff;
+        border: none;
+        border-radius: 0;
+        position: relative;
+        /* overflow: hidden; */
+        height: 95vh;
+        min-height: 500px;
+        /* width: 80%; */
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
+        padding-top: 0;
+    }
+    
+    .inner_box > p {
+        position: absolute;
+        top: 16px;
+        left: 14PX;
+        z-index: 3;
+        color: #ffffff;
+        font-size: 1.3rem;
+        font-weight: 700;
+    }
+    
+    
+    
+    #header {
+        width: 100%;
+        height: 80px;
+        position: fixed;
+        top: auto;
+        bottom: 0;
+        right: 0;
+        z-index: 50;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: #000000;
+        margin: 0 auto;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    
+    .flex{
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+    }
+    
+    
+    /*********************header****************************/
+    #header p{
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: #ffffff;
+        margin-top: 40px;
+        margin-left: 30px;
+        display: none;
+    }
+    #header .nav{
+        vertical-align: middle;
+        margin: auto;
+        padding-right: 40px;
+    }
+    #header .nav ul {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: start;
+    }
+    
+    #header .nav ul li {
+        position: relative;
+        margin-left: 40px;
+    }
+
+    /*********************section****************************/
+    .inner_box::before{
+        content: '';
+        width: 100%;
+        height: 55px;
+        background-color: #000000;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        z-index: 30;
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .inner_box::after{
+        content: '';
+        display: none;
+        width: 100%;
+        height: 100%;
+        background-color: #111111;
+        border-radius: 20px;
+        /* transform: translate(15px, -15px); */
+        position: absolute;
+        top: -12px;
+        left: 12px;
+        z-index: -1;
+    }
+    .inner_box > img{
+        position: absolute;
+        width: 130px;
+        right: 21px;
+        top: 10px;
+        z-index: 3;
+    }
+    
+    
+    /*********************스크롤 만들기****************************/
+    #project_box {
+        overflow-y: scroll;
+        height: 100%;
+        margin-top: 0;
+        box-sizing: border-box;
+    }
+    
+    /*********************스크롤커스텀*************************/
+    /* 스크롤바 설정*/
+    .scroll::-webkit-scrollbar{
+        width: 10px;
+    }
+    
+    /* 스크롤바 막대 설정*/
+    .scroll::-webkit-scrollbar-thumb{
+        height: 17%;
+        background-color: #aaaaaa;
+        border-radius: 0;  
+    }
+    
+    /* 스크롤바 뒷 배경 설정*/
+    .scroll::-webkit-scrollbar-track{
+        background-color: rgba(200,200,200,0.33);
+        border-bottom-right-radius: 0;
+    }
+}
+
