--- a/css/project_style.css
+++ b/css/project_style.css
@@ -6,6 +6,7 @@
 }
 #web {
     padding-top: 80px;
+    padding-bottom: 100px;
 }
 #web h1 {
     text-align: center;
@@ -18,6 +19,7 @@
 #web .lazy div .slide_txt {
     margin-left: 150px;
     position: relative;
+    opacity: 0%;
 }
 #web .lazy div .slide_txt h2 {
     font-size: 10rem;
@@ -63,6 +65,18 @@
 
 #web .lazy div img {
     width: 45%;
+    opacity: 0%;
+}
+
+#web .slick-active img{
+    animation: 4s web forwards 0.5s;
+}
+#web .slick-active .slide_txt{
+    animation: 4s web forwards;
+}
+@keyframes web{
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
 #web .lazy .slick-dots {
     display: flex;
@@ -125,14 +139,16 @@
     bottom: -67px;
     right: 43%;
 }
+
+
 /************************graphic***********************/
 #graphic{
     padding-top:80px;
 }
-#graphic h1{
+/* #graphic h1{
     margin-top: 100px;
     padding-top: 100px;
-}
+} */
 
 .modal img{
     width: 100%;
